--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,10 +97,9 @@ jobs:
           cache: 'yarn'
       - name: Install packages
         uses: ./.github/actions/yarn-monorepo-install
-      - name: Fetch main origin
-        run: git fetch --no-tags --prune --depth=1 origin main
+      - uses: nrwl/nx-set-shas@v3
       - name: Test
-        run: yarn nx affected --target=test:coverage --base=remotes/origin/main
+        run: yarn nx affected --target=test:coverage
       - name: Test coverage comment
         uses: MishaKav/jest-coverage-comment@main
         with:
