--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,6 +90,8 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: Setup Node 16
         uses: actions/setup-node@v3
         with:
@@ -98,7 +100,6 @@ jobs:
       - name: Install packages
         uses: ./.github/actions/yarn-monorepo-install
       - name: Prepare repo
-        uses: git branch --track main origin/main
         uses: nrwl/nx-set-shas@v3
       - name: Test
         run: yarn nx affected --target=test:coverage
