--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,10 +97,12 @@ jobs:
           cache: 'yarn'
       - name: Install packages
         uses: ./.github/actions/yarn-monorepo-install
+      - name: Prepare repo
+        uses: nrwl/nx-set-shas@v3
       - name: Build
         run: yarn nx affected --target=build
       - name: Test
-        run: yarn test:coverage
+        run: yarn nx affected --target=test:coverage
       - name: Test coverage comment
         uses: MishaKav/jest-coverage-comment@main
         with:
