--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -101,6 +101,8 @@ jobs:
         uses: ./.github/actions/yarn-monorepo-install
       - name: Prepare repo
         uses: nrwl/nx-set-shas@v3
+      - name: Build
+        run: yarn nx affected --target=build
       - name: Test
         run: yarn nx affected --target=test:coverage
       - name: Test coverage comment
