--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,24 +11,6 @@ on:
       - beta
       - alpha
 jobs:
-  setup:
-    name: Setup
-    runs-on: ${{matrix.os}}
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        node: [16]
-    steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v3
-      - name: Setup Node 16
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16'
-          cache: 'yarn'
-      - name: Install packages
-        uses: ./.github/actions/yarn-monorepo-install
-
   lint:
     name: Eslint
     runs-on: ${{matrix.os}}
@@ -36,7 +18,6 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         node: [16]
-    needs: setup
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
@@ -65,7 +46,6 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         node: [16]
-    needs: setup
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
@@ -86,7 +66,6 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         node: [16]
-    needs: setup
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
@@ -115,5 +94,13 @@ jobs:
             common-sol-utils, ./packages/common/solUtils/coverage/coverage-summary.json
             common-streams-utils, ./packages/common/streamsUtils/coverage/coverage-summary.json
             streams, ./packages/streams/coverage/coverage-summary.json
-      - name: Find missing dependencies
-        run: node scripts/findMissingDependencies.js
+
+  check_dependencies:
+    name: Find missing dependencies
+    runs-on: ${{matrix.os}}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        node: [16]
+    steps:
+      - run: node scripts/findMissingDependencies.js
