--- a/tsconfig.package.json
+++ b/tsconfig.package.json
@@ -10,9 +10,7 @@
     "declarationDir": "/lib",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "lib": [
-      "ESNext"
-    ],
+    "lib": ["ESNext"],
     "module": "CommonJS",
     "allowJs": true,
     "moduleResolution": "node",
