--- a/demos/client-umd-e2e/package.json
+++ b/demos/client-umd-e2e/package.json
@@ -28,6 +28,8 @@
     "typescript": "^4.9.4"
   },
   "nx": {
-    "implicitDependencies": ["moralis"]
+    "implicitDependencies": [
+      "moralis"
+    ]
   }
 }
