--- a/packages/typedocReadmeTheme/tsconfig.json
+++ b/packages/typedocReadmeTheme/tsconfig.json
@@ -13,12 +13,6 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false
   },
-  "exclude": [
-    "./dist",
-    "./test",
-    "**/*.spec.ts"
-  ],
-  "include": [
-    "**/*"
-  ]
+  "exclude": ["./dist", "./test", "**/*.spec.ts"],
+  "include": ["**/*"]
 }
