cypress and jest overlap

--- a/packages/typedocReadmeTheme/tsconfig.json
+++ b/packages/typedocReadmeTheme/tsconfig.json
@@ -13,6 +13,5 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false
   },
-  "exclude": ["./dist", "./test", "**/*.spec.ts"],
-  "include": ["**/*"]
+  "exclude": ["./dist", "./test", "**/*.spec.ts"]
 }
