--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ yarn-error.log
 packages/**/build
 packages/**/dist
 packages/**/lib
+packages/**/lib.cjs
 packages/**/lib.esm
 packages/**/coverage
 coverage/
