--- a/packages/common/streamsUtils/tsconfig.json
+++ b/packages/common/streamsUtils/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "extends": "../../../tsconfig.package.json",
-  "compilerOptions": {},
-  "include": ["src/**/*", "types/**/*", "integration/**/*"]
+  "compilerOptions": {
+    "outDir": "./lib/",
+    "declarationDir": "./lib/",
+    "rootDir": "./src"
+  },
+  "include": ["src/**/*", "types/**/*"]
 }
