--- a/packages/moralis/package.json
+++ b/packages/moralis/package.json
@@ -25,7 +25,7 @@
     "url": "https://github.com/MoralisWeb3/Moralis-JS-SDK"
   },
   "type": "module",
-  "main": "./lib.esm/index.js",
+  "main": "./lib/esm/index.js",
   "types": "./lib/index.d.ts",
   "typings": "./lib/index.d.ts",
   "sideEffects": false,
@@ -37,105 +37,94 @@
   },
   "files": [
     "lib/*",
-    "lib.cjs/*",
-    "lib.esm/*",
     "dist/*"
   ],
   "scripts": {
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
-    "clean": "rm -rf lib && rm -rf lib.esm && rm -rf lib.cjs && rm -rf ./node_modules/.cache/nx",
+    "clean": "rm -rf lib && rm -rf ./node_modules/.cache/nx",
     "build": "rollup -c",
     "dev": "tsc --watch"
   },
   "exports": {
     ".": {
       "types": {
-        "require": "./lib/index.d.ts",
         "default": "./lib/index.d.ts"
       },
       "default": {
-        "require": "./lib.cjs/index.cjs",
-        "default": "./lib.esm/index.js"
+        "require": "./lib/cjs/index.cjs",
+        "default": "./lib/esm/index.js"
       }
     },
     "./common-core": {
       "types": {
-        "require": "./lib/commonCore/index.d.ts",
         "default": "./lib/commonCore/index.d.ts"
       },
       "default": {
-        "require": "./lib.cjs/commonCore/index.cjs",
-        "default": "./lib.esm/commonCore/index.js"
+        "require": "./lib/cjs/commonCore/index.cjs",
+        "default": "./lib/esm/commonCore/index.js"
       }
     },
     "./streams-typings": {
       "types": {
-        "require": "./lib/streamsTypings/index.d.ts",
         "default": "./lib/streamsTypings/index.d.ts"
       },
       "default": {
-        "require": "./lib.cjs/streamsTypings/index.cjs",
-        "default": "./lib.esm/streamsTypings/index.js"
+        "require": "./lib/cjs/streamsTypings/index.cjs",
+        "default": "./lib/esm/streamsTypings/index.js"
       }
     },
     "./common-evm-utils": {
       "types": {
-        "require": "./lib/commonEvmUtils/index.d.ts",
         "default": "./lib/commonEvmUtils/index.d.ts"
       },
       "default": {
-        "require": "./lib.cjs/commonEvmUtils/index.cjs",
-        "default": "./lib.esm/commonEvmUtils/index.js"
+        "require": "./lib/cjs/commonEvmUtils/index.cjs",
+        "default": "./lib/esm/commonEvmUtils/index.js"
       }
     },
     "./common-sol-utils": {
       "types": {
-        "require": "./lib/commonSolUtils/index.d.ts",
         "default": "./lib/commonSolUtils/index.d.ts"
       },
       "default": {
-        "require": "./lib.cjs/commonSolUtils/index.cjs",
-        "default": "./lib.esm/commonSolUtils/index.js"
+        "require": "./lib/cjs/commonSolUtils/index.cjs",
+        "default": "./lib/esm/commonSolUtils/index.js"
       }
     },
     "./common-auth-utils": {
       "types": {
-        "require": "./lib/commonAuthUtils/index.d.ts",
         "default": "./lib/commonAuthUtils/index.d.ts"
       },
       "default": {
-        "require": "./lib.cjs/commonAuthUtils/index.cjs",
-        "default": "./lib.esm/commonAuthUtils/index.js"
+        "require": "./lib/cjs/commonAuthUtils/index.cjs",
+        "default": "./lib/esm/commonAuthUtils/index.js"
       }
     },
     "./common-streams-utils": {
       "types": {
-        "require": "./lib/commonStreamsUtils/index.d.ts",
         "default": "./lib/commonStreamsUtils/index.d.ts"
       },
       "default": {
-        "require": "./lib.cjs/commonStreamsUtils/index.cjs",
-        "default": "./lib.esm/commonStreamsUtils/index.js"
+        "require": "./lib/cjs/commonStreamsUtils/index.cjs",
+        "default": "./lib/esm/commonStreamsUtils/index.js"
       }
     },
     "./auth": {
       "types": {
-        "require": "./lib/auth/index.d.ts",
         "default": "./lib/auth/index.d.ts"
       },
       "default": {
-        "require": "./lib.cjs/auth/index.cjs",
-        "default": "./lib.esm/auth/index.js"
+        "require": "./lib/cjs/auth/index.cjs",
+        "default": "./lib/esm/auth/index.js"
       }
     },
     "./streams": {
       "types": {
-        "require": "./lib/streams/index.d.ts",
         "default": "./lib/streams/index.d.ts"
       },
       "default": {
-        "require": "./lib.cjs/streams/index.cjs",
-        "default": "./lib.esm/streams/index.js"
+        "require": "./lib/cjs/streams/index.cjs",
+        "default": "./lib/esm/streams/index.js"
       }
     }
   },
@@ -187,8 +176,10 @@
     "@rollup/plugin-terser": "^0.3.0",
     "rollup": "^3.10.1",
     "rollup-plugin-cleaner": "^1.0.0",
+    "rollup-plugin-dts": "^5.2.0",
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-node-polyfills": "^0.2.1",
-    "rollup-plugin-peer-deps-external": "^2.2.4"
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-typescript2": "^0.34.1"
   }
 }
