--- a/packages/solApi/tsconfig.json
+++ b/packages/solApi/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "extends": "../../tsconfig.package.json",
   "compilerOptions": {
-    "outDir": "./lib",
-    "declarationDir": "./lib/",
+    "outDir": "./build",
+    "declarationDir": "./build",
     "rootDir": "./src"
   },
   "include": ["src/**/*", "types/**/*"]
