added ESM build to SDK packages. (#1027)
* added ESM build to base packages.

--- a/packages/common/solUtils/tsconfig.json
+++ b/packages/common/solUtils/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "extends": "../../../tsconfig.package.json",
   "compilerOptions": {
-    "outDir": "./lib",
-    "declarationDir": "./lib/",
+    "outDir": "./build",
+    "declarationDir": "./build",
     "rootDir": "./src"
   },
-  "include": ["src/**/*", "types/**/*"]
+  "include": ["src/**/*"]
 }
