--- a/.prettierignore
+++ b/.prettierignore
@@ -3,9 +3,9 @@ README.md
 
 # Output folders
 packages/**/lib/**/*
+packages/**/build/**/*
 dist
 coverage/
-lib.esm
 
 # Generated files
 packages/**/generated/**/*
@@ -14,6 +14,7 @@ packages/core/src/version.ts
 **/src/operations/openapi.ts
 
 node_modules
+.yarn/
 .yarnrc.yml
 
 # Demos
