--- a/packages/common/streamsUtils/package.json
+++ b/packages/common/streamsUtils/package.json
@@ -3,8 +3,24 @@
   "author": "Moralis",
   "version": "2.14.3",
   "license": "MIT",
-  "main": "./lib/index.js",
+  "type": "module",
+  "main": "./lib/esm/index.js",
   "types": "./lib/index.d.ts",
+  "typings": "./lib/index.d.ts",
+  "exports": {
+    ".": {
+      "types": {
+        "default": "./lib/index.d.ts"
+      },
+      "default": {
+        "require": "./lib/cjs/index.cjs",
+        "default": "./lib/esm/index.js"
+      }
+    }
+  },
+  "files": [
+    "lib/*"
+  ],
   "sideEffects": false,
   "moralis": {
     "name": "Streams utilities",
@@ -12,9 +28,6 @@
     "scope": "common",
     "description": "Utilities, operations, datatypes and types related to Streams"
   },
-  "files": [
-    "lib/*"
-  ],
   "scripts": {
     "test": "jest --runInBand --detectOpenHandles --forceExit --ci",
     "test:coverage": "yarn run test --coverage",
@@ -22,14 +35,21 @@
     "gen:api-types": "openapi-typescript https://api.moralis-streams.com/api-docs/swagger.json --output src/operations/openapi.ts",
     "gen:api-types-beta": "openapi-typescript https://streams-api-stage.aws-prod-streams-master-1.moralis.io/api-docs/swagger.json --output src/operations/openapi.ts",
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
-    "clean": "rm -rf lib && rm -rf tsconfig.tsbuildinfo && rm -rf tsconfig.build.tsbuildinfo && rm -rf ./node_modules/.cache/nx",
-    "build": "tsc -p tsconfig.build.json",
+    "clean": "rm -rf lib && rm -rf ./node_modules/.cache/nx",
+    "build": "rollup -c",
     "dev": "tsc --watch"
   },
   "devDependencies": {
     "@moralisweb3/eslint-config": "^1.0.2",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "jest": "29.3.1",
-    "openapi-typescript": "^5.2.0"
+    "openapi-typescript": "^5.2.0",
+    "rollup": "^3.10.1",
+    "rollup-plugin-cleaner": "^1.0.0",
+    "rollup-plugin-dts": "^5.2.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
+    "rollup-plugin-typescript2": "^0.34.1"
   },
   "dependencies": {
     "@ethersproject/abi": "^5.7.0",
