--- a/packages/aptosApi/package.json
+++ b/packages/aptosApi/package.json
@@ -3,14 +3,20 @@
   "author": "Moralis",
   "version": "2.14.3",
   "license": "MIT",
-  "main": "./lib/index.js",
+  "type": "module",
+  "main": "./lib/esm/index.js",
   "types": "./lib/index.d.ts",
-  "sideEffects": false,
-  "moralis": {
-    "name": "Aptos Api",
-    "type": "feature",
-    "scope": "server",
-    "description": "Make calls to the Aptos blockchain via Moralis Aptos Apis"
+  "typings": "./lib/index.d.ts",
+  "exports": {
+    ".": {
+      "types": {
+        "default": "./lib/index.d.ts"
+      },
+      "default": {
+        "require": "./lib/cjs/index.cjs",
+        "default": "./lib/esm/index.js"
+      }
+    }
   },
   "files": [
     "lib/*"
@@ -20,13 +26,20 @@
     "test:coverage": "yarn run test --coverage --coverageReporters json-summary",
     "test:watch": "yarn run test --watch",
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
-    "clean": "rm -rf lib && rm -rf tsconfig.tsbuildinfo && rm -rf tsconfig.build.tsbuildinfo && rm -rf ./node_modules/.cache/nx",
-    "build": "tsc -p tsconfig.build.json",
+    "clean": "rm -rf lib && rm -rf ./node_modules/.cache/nx",
+    "build": "rollup -c",
     "dev": "tsc --watch"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "jest": "29.3.1",
     "openapi-typescript": "^5.2.0",
+    "rollup": "^3.10.1",
+    "rollup-plugin-cleaner": "^1.0.0",
+    "rollup-plugin-dts": "^5.2.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
+    "rollup-plugin-typescript2": "^0.34.1",
     "typescript": "^4.9.3"
   },
   "dependencies": {
