--- a/packages/create-moralis-dapp/create-moralis-dapp/tsconfig.json
+++ b/packages/create-moralis-dapp/create-moralis-dapp/tsconfig.json
@@ -4,8 +4,14 @@
     "outDir": "./lib",
     "declarationDir": "./lib/",
     "rootDir": "./src",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "module": "CommonJS",
   },
-  "include": ["src/**/*", "types/**/*"],
-  "exclude": ["src/generators/**/template/**"]
+  "include": [
+    "src/**/*",
+    "types/**/*"
+  ],
+  "exclude": [
+    "src/generators/**/template/**"
+  ]
 }
