--- a/packages/create-moralis-dapp/react-vite/tsconfig.json
+++ b/packages/create-moralis-dapp/react-vite/tsconfig.json
@@ -4,8 +4,14 @@
     "outDir": "./lib",
     "declarationDir": "./lib/",
     "rootDir": "./src",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "module": "CommonJS",
   },
-  "include": ["src/**/*"],
-  "exclude": ["src/template/**", "src/**/*.test.ts"]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "src/template/**",
+    "src/**/*.test.ts"
+  ]
 }
