added lib.esm gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ packages/**/dist
 packages/**/lib
 packages/**/coverage
 coverage/
-**/lib.esm
+packages/**/lib.esm
 
 # Prevent accidental commits of npm lock-file
 package-lock.json
