--- a/packages/create-moralis-dapp/create-moralis-dapp/tsconfig.json
+++ b/packages/create-moralis-dapp/create-moralis-dapp/tsconfig.json
@@ -5,13 +5,8 @@
     "declarationDir": "./lib/",
     "rootDir": "./src",
     "resolveJsonModule": true,
-    "module": "CommonJS",
+    "module": "CommonJS"
   },
-  "include": [
-    "src/**/*",
-    "types/**/*"
-  ],
-  "exclude": [
-    "src/generators/**/template/**"
-  ]
+  "include": ["src/**/*", "types/**/*"],
+  "exclude": ["src/generators/**/template/**"]
 }
