--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -28,8 +28,7 @@
     "@moralisweb3/evm-api": "^2.14.3",
     "@moralisweb3/sol-api": "^2.14.3",
     "@tanstack/react-query": "4.24.10",
-    "moralis": "^2.14.3",
-    "swr": "^1.3.0"
+    "moralis": "^2.14.3"
   },
   "peerDependencies": {
     "react": ">=17.0.0",
