docs: add changeset

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,7 +2,9 @@
   "$schema": "https://unpkg.com/@changesets/config@2.0.0/schema.json",
   "changelog": ["@changesets/changelog-github", { "repo": "MoralisWeb3/Moralis-JS-SDK" }],
   "commit": false,
-  "fixed": [["@moralisweb3/!(eslint-config|typedoc-readme-theme)", "@create-moralis-dapp/*", "moralis", "create-moralis-dapp"]],
+  "fixed": [
+    ["@moralisweb3/!(eslint-config|typedoc-readme-theme)", "@create-moralis-dapp/*", "moralis", "create-moralis-dapp"]
+  ],
   "linked": [],
   "access": "public",
   "baseBranch": "main",
