--- a/packages/create-moralis-dapp/toolkit/package.json
+++ b/packages/create-moralis-dapp/toolkit/package.json
@@ -18,6 +18,7 @@
     "build": "tsc"
   },
   "dependencies": {
+    "chalk": "^4.1.2",
     "ejs": "^3.1.8",
     "fs-extra": "^10.1.0",
     "inquirer": "^8.0.0",
