--- a/packages/evmApi/tsconfig.json
+++ b/packages/evmApi/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.package.json",
   "compilerOptions": {
+    "module": "ES2015",
     "outDir": "./build",
     "declarationDir": "./build",
     "rootDir": "./src"
