--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -32,3 +32,11 @@ jobs:
         run: yarn build
       - name: E2E Tests
         run: yarn test:e2e
+      - name: Notify Slack if failed
+        id: slack
+        if: failure()
+        uses: slackapi/slack-github-action@v1.23.0
+        with:
+          payload: { "repository_name": "Moralis JS SDK" }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_E2E_TESTS_FAIL_URL }}
